[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catrole"
authors = [
    {name = "Chowdhury Faizal Ahammed"},
    {name = "Neal Dreher"},
]
version = "0.2.1"
description = "AWS IAM Role/Policy permission viewer — see what a role or policy can do"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28",
    "rich>=13.0",
]

[project.scripts]
catrole = "catrole.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
